--- a/packageManifest.json
+++ b/packageManifest.json
@@ -5,7 +5,7 @@
   "minimumHEVersion": "2.3.0",
   "dateReleased": "2026-01-09",
   "licenseFile": "",
-  "releaseNotes": "v3.0.9 - Fixed device creation on first install (foundDevices timing issue",
+  "releaseNotes": "v3.1.0 - Added Coffee Maker Driver",
   "documentationLink": "https://github.com/craigde/hubitat-homeconnect-v3/blob/main/README.md",
   "communityLink": "",
   "apps": [
